fixed text align issues

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ nav li a{
 
 .container {
     width: 100%;
-    padding: 0px 100px 0px 100px;
+    padding: 0px 10% 0px 13%;
 }
 
 .container-2 {
@@ -263,7 +263,7 @@ h6{
 
 .content{
   width: 100%;
-  height: 226px;
+  height: 200px;
   border-radius: 10px;
   top: 0;
   left: 0;
